<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/screenBackground1"
    tools:context=".SecondFragment">

    <TextView
        android:id="@+id/textview_second"
        android:layout_width="0dp"
        android:layout_height="65dp"
        android:layout_marginTop="80dp"
        android:background="#585A5A"
        android:fontFamily="@font/armata"
        android:gravity="center|center_horizontal"
        android:text="@string/hello_second_fragment"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_second"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginBottom="52dp"
        android:background="@color/navColor"
        android:fontFamily="@font/armata"
        android:text="@string/previous"
        android:textColor="#303438"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textViewName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/armata"
        android:text="@string/Fname"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/button_second"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.772"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textview_second"
        app:layout_constraintVertical_bias="0.299" />

    <TextView
        android:id="@+id/NmLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="monospace"
        android:text="Full Name:"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/textViewName"
        app:layout_constraintEnd_toStartOf="@+id/textViewName"
        app:layout_constraintHorizontal_bias="0.285"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textview_second"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/SuLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="monospace"
        android:text="Slack User:"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/textViewUser"
        app:layout_constraintEnd_toStartOf="@+id/textViewUser"
        app:layout_constraintHorizontal_bias="0.363"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/NmLabel"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/textViewUser"
        android:layout_width="94dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/armata"
        android:text="@string/slackName"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/button_second"
        app:layout_constraintEnd_toEndOf="@+id/textViewName"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textViewName"
        app:layout_constraintTop_toBottomOf="@+id/textViewName"
        app:layout_constraintVertical_bias="0.13" />

    <TextView
        android:id="@+id/eLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:fontFamily="monospace"
        android:text="Email:"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/textViewEmail"
        app:layout_constraintEnd_toStartOf="@+id/textViewEmail"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/SuLabel"
        app:layout_constraintTop_toBottomOf="@+id/SuLabel"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/textViewEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:fontFamily="@font/armata"
        android:text="@string/Email"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/button_second"
        app:layout_constraintEnd_toEndOf="@+id/textViewUser"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textViewUser"
        app:layout_constraintTop_toBottomOf="@+id/textViewUser"
        app:layout_constraintVertical_bias="0.004" />

    <TextView
        android:id="@+id/TrLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="33dp"
        android:fontFamily="monospace"
        android:text="Track(s):"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/textViewTrack"
        app:layout_constraintEnd_toStartOf="@+id/textViewTrack"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/eLabel"
        app:layout_constraintTop_toBottomOf="@+id/eLabel"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/textViewTrack"
        android:layout_width="94dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/armata"
        android:text="@string/Track"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/button_second"
        app:layout_constraintEnd_toEndOf="@+id/textViewEmail"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textViewEmail"
        app:layout_constraintTop_toBottomOf="@+id/textViewEmail"
        app:layout_constraintVertical_bias="0.245" />
</androidx.constraintlayout.widget.ConstraintLayout>